<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:foregroundGravity="fill"
    tools:ignore="Overdraw">
    <TextView
        android:id="@+id/song_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/music_player_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/song_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        android:text="@string/music_player_artist"
        android:textColor="@color/white"
        android:textSize="19sp"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/previous"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_skip_previous_48px" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:contentDescription="@string/play"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play_circle_filled_48px" />

        <ImageButton
            android:id="@+id/next"
            android:contentDescription="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_skip_next_48px" />
    </LinearLayout>


</LinearLayout>