<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/colorPrimary"
    android:paddingTop="10dp"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        style="@style/MusicPlayer_Text"
        tools:text="@string/music_player_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/artist"
        android:layout_marginTop="2dp"
        android:layout_width="0dp"
        style="@style/MusicPlayer_Text"
        tools:text="@string/music_player_artist"
        android:paddingBottom="2dp"
        android:textSize="19sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageButton
        android:id="@+id/heart"
        android:contentDescription="@string/favourite_description"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_haertfull"

        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/seekbar"
        app:layout_constraintTop_toTopOf="@+id/title"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.7"
        android:layout_marginEnd="0dp" />
    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/cover"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="0dp"
        android:foregroundGravity="bottom"
        android:src="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        tools:text="@string/duration"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@+id/next"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/seekbar"
        app:layout_constraintVertical_bias="0.361" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        tools:text="@string/time"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        app:layout_constraintRight_toLeftOf="@+id/previous"
        app:layout_constraintTop_toBottomOf="@+id/seekbar" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:contentDescription="@string/seek_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/previous"
        android:contentDescription="@string/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_skip_previous_48px"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        app:layout_constraintRight_toLeftOf="@+id/play"
        app:layout_constraintTop_toBottomOf="@+id/seekbar" />

    <ImageButton
        android:id="@+id/play"
        android:contentDescription="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_play_circle_filled_48px"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar" />

    <ImageButton
        android:id="@+id/next"
        android:contentDescription="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_skip_next_48px"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintLeft_toRightOf="@+id/play"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/seekbar"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>